<resources>
    <string name="app_name">Database comparision</string>
    <string name="pairDescriptionTextView">Market</string>
    <string name="lastPriceDescriptionTextView">Last Price</string>
    <string name="volumeDescriptionTextView">Volume</string>
    <string name="timeDescriptionTextView">Last updated: </string>
    <string name="lowestPriceDescriptionTextView">Lowest price: </string>
    <string name="highestPriceDescriptionTextView">Highest price: </string>
    <string name="noInternetConnectionError">No internet connection.\n Click to retry.</string>
    <string name="unknownError">Error occurred.\n Please retry.</string>

    <!--basics-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string-array name="estimation_options">
        <item>1, 2, 4, 8, 16, 32, 64</item>
        <item>1, 2, 3, 5, 8, 13, 20, 40</item>
    </string-array>



    <!--menu-->
    <string name="home_menu">Learn</string>
    <string name="search_menu">Search</string>
    <string name="test_menu">Test</string>
    <string name="settings_menu">Settings</string>
    <string name="login_button">Login</string>


    <!--search-->
    <string name="search_hint">Search... </string>
    <string name="search_menu_to_learn">TO LEARN</string>
    <string name="search_menu_learned">LEARNED</string>
    <string name="search_menu_all">ALL</string>

    <!--test-->
    <string name="test_hint">Translate here</string>
    <string name="check">check</string>
    <string name="next">next</string>
    <string name="no_learning_words">No words to learn selected</string>


    <!--mark wordsToLearn-->
    <string name="select_all">Select all</string>
    <string name="selecte_to_learn">Add to learning list</string>
    <string name="delete_word">Delete permanently</string>
    <string name="added_to_learning_list">Successfully added to learning list</string>
    <string name="deleted">Successfully deleted</string>


    <!--session-->
    <string name="stories">Stories for this session: </string>
    <string name="estimations">Estimations for this story: </string>
    <string name="message_added">Message added</string>


    <!--errors -->
    <string name="unknown_error">Unexpected error has occurred</string>
    <string name="no_internet">No internet connected</string>
    <string name="not_found">Not found</string>
    <string name="unathorized_error">Session ended</string>
    <string name="wrong_password">Wrong password</string>

    <!--register-->
    <string name="email_hint">E-mail</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="account_created">Account created</string>

    <string name="invalid_email">Invalid e-mail address</string>
    <string name="invalid_username_too_short">Username should have at least 3 characters</string>
    <string name="invalid_password_too_short">Password should have at least 3 characters</string>
    <string name="invalid_password_no_number">Password should have at 1 number</string>


    <!--login -->
    <string name="login_empty">Login should not be empty</string>
    <string name="password_empty">Password should not be empty</string>
    <string name="login_successful">Logged in successfully</string>
    <string name="register_prompt">Don\'t have an account? </string>
    <string name="register_here">Register here.</string>

</resources>
