<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.learnwords.WordsLearningFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchEditText"
            android:drawableStart="@drawable/ic_search_gray"
            android:background="@drawable/white_rounded_rectangle"
            android:hint="@string/search_hint"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addToLearningListButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/selecte_to_learn" />

            <Button
                android:text="@string/delete_word"
                android:layout_marginStart="16dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextView
            android:id="@+id/selectAllButton"
            android:text="@string/select_all"
            android:padding="8dp"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchWordsRecycler"
        tools:listitem="@layout/translation_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>