<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.learnwords.WordsLearningFragment">


    <LinearLayout
        android:id="@+id/wordLayout"
        android:orientation="vertical"
        android:background="@drawable/accent_rounded_rectangle"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/englishWordTextView"
            tools:text="la lagrima"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/spanishWordTextView"
            android:layout_marginTop="24dp"
            android:textStyle="italic"
            android:visibility="gone"
            tools:text="tear"
            tools:visibility="visible"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <EditText
        android:id="@+id/wordEditText"
        android:hint="@string/test_hint"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/checkButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/nextButton"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>